@@ -5,6 +5,7 @@ v0.8.0
 - fix index for Daily.{no} (index is 1-based)
 - fill only Day0 to Day6 (only 7 days to be provided)
 - add Hourly.{no} data
+- fixes and cleanup for Current, Day and Daily
 v0.7.1
 - fix some syntax errors on python 3.11
 - check addon_data path exists
